k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: inventory-deployment

spec:

  replicas: 3

  selector:
    matchLabels:
      app: inventory

  template:

    metadata:
      labels:
        app: inventory

    spec:

      containers:

        - name: inventory

          image: username/inventory-app:latest

          ports:
            - containerPort: 5000
