k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: inventory-service

spec:

  selector:
    app: inventory

  ports:

    - protocol: TCP
      port: 80
      targetPort: 5000

  type: LoadBalancer
