k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: inventory-ingress

spec:

  rules:

  - host: api.inventory.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:
            name: inventory-service

            port:
              number: 80
